@@ -1,3 +1,7 @@
+2008-05-23   <> 
+
+	* src/Main.cs: Fixed 'TRUE' value issue for MSSQL
+
 2008-02-11  Mirco Bauer <meebey@meebey.net> 
 
 	* src/Main.cs: Added ORDER BY test
